# backend/docs/swagger.json
@@ -1643,6 +1643,10 @@
         "ent.Room": {
             "type": "object",
             "properties": {
+                "RoomName": {
+                    "description": "RoomName holds the value of the \"RoomName\" field.",
+                    "type": "string"
+                },
                 "edges": {
                     "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the RoomQuery when eager-loading is set.",
                     "type": "object",
