# backend/ent/schema/room.go
@@ -3,7 +3,7 @@ package schema
 import (
     
     "github.com/facebookincubator/ent"
-	
+	"github.com/facebookincubator/ent/schema/field"
 	"github.com/facebookincubator/ent/schema/edge"
 )
 // Room holds the schema definition for the Room entity.
@@ -15,7 +15,7 @@ type Room struct {
 func (Room) Fields() []ent.Field {
 	return []ent.Field{
 
-
+		field.String("RoomName").Unique(),
 
 		
 
